--- a/front-end/src/components/Card.css
+++ b/front-end/src/components/Card.css
@@ -6,9 +6,10 @@
 
 
 .Card2 {
-    width : 350px;
+    width : 650px;
     height : 200px;
     font-size: 17px;
     margin-bottom: 10px;
+    text-align: center;
     margin:auto;
 }
