--- a/front-end/src/components/Card.css
+++ b/front-end/src/components/Card.css
@@ -5,11 +5,17 @@
 }
 
 
-.Card2 {
+/* .Card2 {
+    background:palegreen;
     width : 650px;
     height : 200px;
     font-size: 17px;
     margin-bottom: 10px;
     text-align: center;
     margin:auto;
-}
+} */
+
+/* 
+.Card2 img {
+    width: 100px;
+} */
